# ap-base

./: .gitignore  .gitmodules  CLAUDE.md  DESIGN_UI.md  Makefile  PLAN.md  README.md  SUGGESTED_RENAMES.md  TODO.md  publish-issues.sh  pyproject.toml
.claude/skills/: commit-submodules.md
.github/workflows/: links.yml  markdown-lint.yml
docs/: blink-rejection-analysis.md  directory-structure.md  index.md  quick-start.md  workflow.md
docs/tools/: ap-common.md  ap-copy-master-to-blink.md  ap-create-master.md  ap-cull-light.md  ap-cull-lights.md  ap-empty-directory.md  ap-fits-headers.md  ap-master-calibration.md  ap-move-calibration.md  ap-move-light-to-data.md  ap-move-lights.md  ap-move-master-to-library.md  ap-move-raw-light-to-blink.md  ap-preserve-header.md
patches/: ap-common.patch  ap-fits-headers.patch  ap-master-calibration.patch  ap-move-calibration.patch  ap-move-lights.patch
pending/: ap-common.md  ap-cull-lights.md  ap-fits-headers.md  ap-master-calibration.md  ap-move-calibration.md  ap-move-lights.md
standards/: cli.md  github-workflows.md  index.md  logging-progress.md  makefile.md  project-structure.md  readme-format.md
