[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ap-base"
version = "0.1.0"
description = "Monorepo for astrophotography pipeline projects"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Naveen Malik"}
]
keywords = ["astrophotography"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[tool.setuptools]
packages = []

[project.optional-dependencies]
dev = [
    "linkchecker>=10.0",
    "pymarkdownlnt>=0.9",
]
